# InferEdgeLab

./: .gitignore  BENCHMARKS.md  Makefile  README.ko.md  README.md  Roadmap.md  pyproject.toml
.github/workflows/: benchmarks.yml
benchmarks/: rknn_curated_results.json
benchmarks/rknn_accuracy_payloads/: yolov8n_fp16_detection_accuracy.json  yolov8n_int8_detection_accuracy.json
benchmarks/rknn_odroid_m2/: yolov8l.onnx__rknn__odroid_m2__fp16__b1__h640w640__20260421-085705.json  yolov8m.onnx__rknn__odroid_m2__fp16__b1__h640w640__20260421-085659.json  yolov8s.onnx__rknn__odroid_m2__fp16__b1__h640w640__20260421-085656.json
benchmarks/rknn_odroid_m2_enriched/: yolov8n.onnx__rknn__odroid_m2__fp16__b1__h640w640__20260422-084651-661456.json  yolov8n.onnx__rknn__odroid_m2__int8__b1__h640w640__20260422-084651-662668.json
benchmarks/rknn_odroid_m2_reports/: yolov8m_rknn_fp16_vs_int8_compare.html  yolov8m_rknn_fp16_vs_int8_compare.md  yolov8n_rknn_fp16_vs_fp16_compare.html  yolov8n_rknn_fp16_vs_fp16_compare.md  yolov8n_rknn_fp16_vs_int8_compare.html  yolov8n_rknn_fp16_vs_int8_compare.md  yolov8s_rknn_fp16_vs_int8_compare.html  yolov8s_rknn_fp16_vs_int8_compare.md
docs/: benchmark_policy.md  benchmarking.md  pipeline_contract.md
edgebench/: api.py  cli.py  config.py
examples/: README.md
inferedgelab/: api.py  cli.py  config.py
reports/: test_cross_label.md  test_same_label.md
scripts/: check_compare_policy.py  check_doc_markers.py  check_doc_update_scope.py  check_jetson_tensorrt_env.py  check_regression.py  demo_pipeline_full.sh  demo_pipeline_smoke.sh  export_onnx_models.py  export_portfolio_pdf.sh  export_validation_evidence.py  import_rknn_results.py  make_eval_demo_data.py  make_eval_variant_manifest.py  run_enriched_accuracy_demo.py  run_jetson_tensorrt_validation.py  run_jetson_validation_pipeline.py  update_benchmarks.py  update_jetson_validation_docs.py  update_readme.py
tests/: test_api.py  test_api_job_contract.py  test_api_response_contract.py  test_api_worker_workflow.py  test_check_jetson_tensorrt_env.py  test_ci_doc_guards.py  test_comparator.py  test_compare_cli.py  test_compare_latest.py  test_compare_policy.py  test_compare_runtime_dir.py  test_compare_service.py  test_deployment_decision.py  test_enrich_pair.py  test_enrich_result.py  test_evaluate_detection.py  test_export_validation_evidence.py  test_history_report_service.py  test_import_rknn_results.py  test_judgement.py  test_list_results_service.py  test_loader.py  test_metric_backends.py  test_profile_rknn_integration.py  test_report_generators.py  test_rknn_engine.py  test_run_enriched_accuracy_demo.py  test_run_jetson_tensorrt_validation.py  test_run_jetson_validation_pipeline.py  test_runtime_execution_smoke.py  test_runtime_worker_response_compat.py  test_serve.py  test_studio_routes.py  test_summarize.py  test_summarize_service.py  test_update_benchmarks.py  test_update_jetson_validation_docs.py  test_validation_contracts.py  test_validation_demo_report.py  test_version.py  (+1 more)
(+172 files in other folders)
