[project]
name = "inferedgelab"
version = "0.1.0"
description = "CLI-based Edge AI inference validation and benchmarking framework"

keywords = ["edge-ai", "inference", "benchmark", "validation", "tensorrt", "onnx", "rknn", "mlops"]

authors = [{ name = "HyeokJun Gwon" }]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "onnx",
    "onnxruntime",
    "numpy",
    "rich",
    "typer",
    "fastapi",
    "uvicorn"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
inferedgelab = "inferedgelab.cli:app"
edgebench = "inferedgelab.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["inferedgelab*"]
exclude = ["models*"]

[tool.setuptools.package-data]
inferedgelab = ["studio/static/*.html", "studio/static/*.js", "studio/static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.inferedgelab.compare]
latency_improve_threshold = -3.0
latency_regress_threshold = 3.0
accuracy_improve_threshold = 0.2
accuracy_regress_threshold = -0.2
tradeoff_caution_threshold = -0.3
tradeoff_risky_threshold = -1.0
tradeoff_severe_threshold = -2.0
